relatorios/202210266/T3/cppcheck.txt
trab3.cpp:16:59: performance: Function parameter 'transacoes' should be passed by const reference. [passedByValue]
void retirada(std::list<previdencia*> &lista, previdencia transacoes){
                                                          ^
trab3.cpp:30:20: error: Iterator 'it' used after element has been erased. [eraseDereference]
        lista.erase(it);
                   ^
trab3.cpp:24:5: note: Iterator 'it' used after element has been erased.
    for(auto it = lista.begin(); it != lista.end(); it++){
    ^
trab3.cpp:30:20: note: Iterator 'it' used after element has been erased.
        lista.erase(it);
                   ^
trab3.cpp:60:33: error: Uninitialized struct member: transacoes.cotas [uninitStructMember]
                retirada(lista, transacoes);
                                ^
trab3.cpp:39:23: style: Variable 'valor_total' is assigned a value that is never used. [unreadVariable]
    double valor_total=0;
                      ^
